Update Dockerfile & Jenkinsfile